--- a/index.html
+++ b/index.html
@@ -2,76 +2,7 @@
 <html>
 
 <head>
-    <style>
-        /* Estilos generales */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Estilos del encabezado */
-        header {
-            background: #333;
-            color: #fff;
-            padding: 20px;
-            position: relative;
-            /* Agregado */
-        }
-
-        h1 {
-            margin: 0;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        /* Estilos de las secciones */
-        section {
-            padding: 20px;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .project {
-            background: #f4f4f4;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        /* Estilos del pie de página */
-        footer {
-            background: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        /* Estilos de la imagen en la esquina superior derecha */
-        header img {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            width: 100px;
-            height: auto;
-            border-radius: 50%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
